# ISR

./: .gitignore  CMakeLists.txt  README.md  _config.yaml
dev/: objects.cpp  objects.cpp~  objects.h
shaders/: raymarch.frag  raymarch.vert
src/: glad.c  main.cpp
