cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)
project(ISR)
find_package(glfw3 REQUIRED)
file(GLOB SRC_FILES dev/*.h dev/*.cpp src/*.cpp src/*.c)
add_executable(${PROJECT_NAME} ${SRC_FILES})
include_directories(${CMAKE_SOURCE_DIR}/dev)
target_link_libraries(${PROJECT_NAME} glfw)
